--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "cocktail_n_mix",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "4.2.2"
+    "@rails/webpacker": "4.2.2",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.1"
